--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.12.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.11.0",
